15-Jan-2013 Opus.Core.Exception no longer has a constructor taking a boolean to indicate a stack trace is printed.

15-Jan-2013 Opus.Core.Log now copes with unescaped braces in the format string passed. Previously this would result in an exception thrown, but could be caused by C code output from compiler warnings/errors.

09-Jan-2013 Opus.Core.IAction now also inherits from System.ICloneable.

04-Jan-2013 Opus.Core.IToolEnvironmentVariables.Variables now takes a BaseTarget rather than a Target.

04-Jan-2013 C.ThirdpartyModules now have a C.INullOpTool assigned to them, in order for Targets to be fully qualified with a toolset. This is useful because Thirdparty libraries must have been built with a toolset, so should be identifiable.
            Fetching an instance of a Target now requires a non-null Opus.Core.IToolset instance.

03-Jan-2013 Opus.Core.IToolEnvironmentPaths has been removed. Use IToolEnvironmentVariables instead.

02-Jan-2013 Opus.Core.ITool.Executable now takes an Opus.Core.BaseTarget instead of a Target.

20-Dec-2012 Package definition files now accept a relative path to the schema. This avoids problems in earlier versions of Opus that could reference multiple copies of the schema. An exception is now thrown with old style definition files. Running commands again with -forcedefinitionupdate resolves that.

20-Dec-2012 Adding action '-forcedefinitionupdate' which will immediate write out package definition files after they have been read. This can be used to force any updates required in future Opus versions.

16-Dec-2012 Adding support for a package with multiple versions to be valid for a given build (to indicate supported builds). A build must narrow down to a single version though, so a new command Action, <packagename>.version, has been introduced, which can be used to select the version required.

16-Dec-2012 Adding Opus.Core.IActionCommandComparison, for an action that requires a custom command comparison.
