@@ -1,3 +1,5 @@
+15-Jan-2013 A null tool type cannot be passed to the constructor of Opus.Core.ModuleToolAssignmentAttribute.
+
 15-Jan-2013 Opus.Core.Exception no longer has a constructor taking a boolean to indicate a stack trace is printed.
 
 15-Jan-2013 Opus.Core.Log now copes with unescaped braces in the format string passed. Previously this would result in an exception thrown, but could be caused by C code output from compiler warnings/errors.
